# py_gpi

./: .gitignore  README.md  pyproject.toml
.kiro/: GPI_BLUEPRINT_V2.md
.kiro/specs/gpi-v2-refactoring/: .config.kiro  design.md  requirements.md  tasks.md
gpi/: __init__.py  __main__.py
gpi/ai/: __init__.py  client.py  completion.py  explainer.py  suggestions.py
gpi/cli/: __init__.py  app.py  interactive.py
gpi/cli/commands/: __init__.py  add.py  explain.py  init.py  plugin.py  replay.py  upgrade.py  version.py
gpi/core/: __init__.py  composer.py  config.py  exceptions.py  lock.py  network.py  resolver.py  validator.py  writer.py
gpi/modules/: __init__.py  base.py  registry.py
gpi/modules/auth/: __init__.py  jwt.py  oauth2.py  sessions.py
gpi/modules/cache/: __init__.py  redis.py
gpi/modules/database/: __init__.py  mysql.py  postgres.py  sqlite.py
gpi/modules/framework/: __init__.py  django.py  fastapi.py  flask.py
gpi/modules/infra/: __init__.py  docker.py  docker_compose.py  github_actions.py
gpi/modules/monitoring/: __init__.py  prometheus_grafana.py
gpi/modules/queue/: __init__.py  celery.py  rq.py
gpi/modules/testing/: __init__.py  pytest.py
gpi/templates/common/: .env.example.j2  .env.j2  .gitignore.j2  README.md.j2  requirements.txt.j2
gpi/templates/django/monolithic/: manage.py.j2  settings.py.j2
gpi/templates/fastapi/microservices/: docker-compose.yml.j2  service_main.py.j2
gpi/templates/fastapi/monolithic/: database.py.j2  main.py.j2
gpi/templates/fastapi/monolithic/crud/: create.py.j2  delete.py.j2  read.py.j2  update.py.j2
gpi/templates/flask/monolithic/: app.py.j2
gpi/utils/: __init__.py  display.py  file_utils.py  filesystem.py  i18n.py  network.py
tests/: conftest.py  test_cli.py  test_cli_commands.py  test_composer.py  test_config.py  test_file_utils.py  test_generators.py  test_groq_client.py  test_i18n.py  test_integration.py  test_lock.py  test_modules_coverage.py  test_network.py  test_registry.py  test_resolver.py  test_utils.py  test_validator.py  test_writer.py
