[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_gpi"
version = "2.0.5"
description = "GPI — Générateur de Projet Intelligent pour Python backend"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "SOSSOU Elkast Orsini" },
]
keywords = [
    "project-generator", "scaffolding", "fastapi", "flask", "django",
    "backend", "python", "cli", "microservices", "crud", "boilerplate",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Environment :: Console",
]
dependencies = [
    "typer[all]>=0.15.0",
    "rich>=13.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pydantic>=2.9.0",
    "groq>=1.0.0",
    "httpx>=0.27.0",
    "packaging>=24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
ai = ["groq>=1.0.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "hypothesis>=6.0",
]

[project.scripts]
gpi = "gpi.cli.app:main"

[project.entry-points."gpi.modules"]
# Espace réservé aux plugins tiers — les modules natifs sont chargés directement

[project.urls]
Homepage = "https://github.com/elkast/py_gpi"
Repository = "https://github.com/elkast/py_gpi"

[tool.hatch.build.targets.wheel]
packages = ["gpi"]

[tool.hatch.build.targets.sdist]
include = ["gpi/", "tests/", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=gpi",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-v",
]

[tool.coverage.run]
omit = [
    # Anciens générateurs v0.1 — remplacés par l'architecture v2
    "gpi/generators/*",
    "gpi/cli.py",
    "gpi/core/profile.py",
    "gpi/utils/file_utils.py",
    # CLI interactif — nécessite une session TTY
    "gpi/cli/interactive.py",
    # Point d'entrée __main__
    "gpi/__main__.py",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
